# keystate-plasmoid

./: .gitignore  CMakeLists.txt  HACKING  LICENSE  Makefile.plasmoid-package  README.md  TODO  metadata.desktop
contents/code/: array.js  baselayout.js  configuration.js  constants.js  global.js  globals.js  horizontallayout.js  keyconfiguration.js  keyinformation.js  keyinformationcontainer.js  keyinformationlist.js  layout.js  layoutconfiguration.js  localization.js  logic.js  main.js  number.js  object.js  plasmoidhandler.js  rectanglelayout.js  singlelayout.js  string.js  svglayout.js  symbollayout.js  textbaselayout.js  textlayout.js  verticallayout.js
contents/config/: main.xml
contents/ui/: ColoredRectangleDelegate.qml  KeyNameDelegate.qml  KeyState.qml  SimpleItemDelegate.qml  SimpleRectangleDelegate.qml  SimpleTextDelegate.qml  config.ui  main.qml
contents/ui/components/: ColorSelector.qml  FontSelector.qml
contents/ui/config/: AppearancePage.qml
package/: metadata.desktop
package/contents/code/: logic.js
package/contents/config/: config.qml  main.xml
package/contents/ui/: ColoredRectangleDelegate.qml  KeySymbolDelegate.qml  SimpleTextDelegate.qml  main.qml
package/contents/ui/components/: ColorSelector.qml
package/contents/ui/config/: KeysPage.qml
